--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "simplebar-react": "^3.2.6",
     "stylis": "^4.3.4",
     "stylis-plugin-rtl": "^2.1.1",
+    "swr": "^2.2.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
