--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.53.2",
     "react-router": "^7.0.2",
     "simplebar-react": "^3.2.6",
+    "sonner": "^1.7.0",
     "stylis": "^4.3.4",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.5",
