--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   },
   "packageManager": "yarn@1.22.22",
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
+    "match-sorter": "^6.3.3",
+    "@tabler/icons-react": "^2.32.0",
     "@emotion/cache": "^11.13.5",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
@@ -54,12 +57,18 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.2",
+    "react-markdown": "^9.0.1",
     "react-router": "^7.0.2",
+    "react-table": "^7.8.0",
+    "rehype-highlight": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "simplebar-react": "^3.2.6",
     "sonner": "^1.7.0",
     "stylis": "^4.3.4",
     "stylis-plugin-rtl": "^2.1.1",
     "swr": "^2.2.5",
+    "turndown": "^7.2.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -69,7 +78,9 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
+    "@types/react-table": "^7.7.20",
     "@types/stylis": "^4.2.7",
+    "@types/turndown": "^5.0.5",
     "@typescript-eslint/parser": "^8.17.0",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "eslint": "^9.16.0",
