--- a/package.json
+++ b/package.json
@@ -29,8 +29,6 @@
   "packageManager": "yarn@1.22.22",
   "dependencies": {
     "@ant-design/icons": "^5.2.6",
-    "match-sorter": "^6.3.3",
-    "@tabler/icons-react": "^2.32.0",
     "@emotion/cache": "^11.13.5",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
@@ -46,11 +44,15 @@
     "@mui/x-data-grid": "^7.23.1",
     "@mui/x-date-pickers": "^7.23.1",
     "@mui/x-tree-view": "^7.23.0",
+    "@tabler/icons-react": "^2.32.0",
+    "@tanstack/react-query": "^5.62.11",
+    "@tanstack/react-query-devtools": "^5.62.11",
     "autosuggest-highlight": "^3.3.4",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "es-toolkit": "^1.29.0",
     "framer-motion": "^11.13.1",
+    "match-sorter": "^6.3.3",
     "minimal-shared": "^1.0.3",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
